--- a/home.css
+++ b/home.css
@@ -1,43 +1,29 @@
 h1 {
-<<<<<<< HEAD:home.css
 	margin-top: 0px;
 	margin-bottom: 0px;
-=======
-	/*margin-top: 1em;*/
-	margin: 0;
-	height: 2em;
->>>>>>> contact:style.css
+	padding: 1em;
 	text-decoration: underline;
 	text-align: center;
 	font-size: 50px;
 	font-weight: bold;
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.4);
 }
 
 body {
 	font-family: papyrus;
-<<<<<<< HEAD:home.css
 	color: #80bd9e;
 	font-size: 27px;
 	font-weight: bold;
-=======
-	color: #824113;
-	font-size: 27px;
->>>>>>> contact:style.css
 }
 
 nav {
 	width: 100%;
-<<<<<<< HEAD:home.css
     height: 5em;
-=======
-    height: 8em;
->>>>>>> contact:style.css
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.4);
     z-index: 2;
     cursor: pointer;
 }
@@ -95,23 +81,14 @@ nav#scrolling {
 
 
 /*background image settings*/
-<<<<<<< HEAD:home.css
 .background-home {
 	position: absolute;
     z-index: -5;
-=======
-.background-contact {
-    z-index: -3;
->>>>>>> contact:style.css
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-<<<<<<< HEAD:home.css
     background-image: url(images/background-home.jpg);
-=======
-    background-image: url(images/background-contact.jpg);
->>>>>>> contact:style.css
     opacity: .8;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -123,12 +100,7 @@ p {
 	text-align: center;
 	z-index: 1;
 	font-weight: bold;
-<<<<<<< HEAD:home.css
 	margin: 0;
-=======
-	margin-top: 0;
-	margin-bottom: 1em;
->>>>>>> contact:style.css
 }
 
 .format {
@@ -165,15 +137,14 @@ p {
 .width {
 	padding-left: 250px;
 	padding-right: 250px;
-<<<<<<< HEAD:home.css
 	margin-bottom: 0;
-	background-color: rgba(0,0,0,0.3);
+	padding: 1em;
+	background-color: rgba(0,0,0,0.4);
 }
 
 #link-div {
-=======
->>>>>>> contact:style.css
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.4);
+	padding: 0.5em;
 }
 
 #link {
